# simple-oidc-contour-authserver

./: .dockerignore  .envrc  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs
.github/workflows/: rust.yml
demo/: ip_config.json
scripts/: generate_certs.sh
src/: auth.rs  auth_basic.rs  auth_bearer.rs  auth_ip.rs  authentication.rs  helpers.rs  main.rs  token_validation.rs
src/checkers/: v2.rs  v3.rs
