[package]
name = "simple-oidc-contour-authserver"
version = "0.3.1"
authors = ["Arthur LE MOIGNE <me@alemoigne.fr>"]
edition = "2018"

[dependencies]
tonic = { version = "0.6.2", features = ["tls"] }
prost = "0.9.0"
prost-types = "0.9.0"
tokio = { version = "1.18.5", features = ["macros", "rt-multi-thread", "fs"] }
env_logger = "0.9.0"
anyhow = "1.0.56"
thiserror = "1.0.30"
async-trait = "0.1.53"
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
envy = "0.4.2"
jsonwebtoken = "8.0.1"
reqwest = { version = "0.11.10", features = ["json"] }
http = "0.2.6"
structopt = "0.3.26"
futures = "0.3.21"
jemallocator = "0.3.2"
base64 = "0.13.0"
htpasswd-verify = "0.2.1"

[build-dependencies]
tonic-build = "0.6.2"

[replace]
"h2:0.3.12" = { git = "https://github.com/arthurlm/h2.git", rev = "b2e7b915d875f25c49f895b6a072b422d81502ff" }
