[package]
name = "simple-oidc-contour-authserver"
version = "0.3.1"
authors = ["Arthur LE MOIGNE <me@alemoigne.fr>"]
edition = "2018"

[dependencies]
tonic = { version = "0.10.1", features = ["tls"] }
prost = "0.12.1"
prost-types = "0.12.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs"] }
env_logger = "0.10.0"
anyhow = "1.0.75"
thiserror = "1.0.48"
async-trait = "0.1.73"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
envy = "0.4.2"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.20", features = [
    "json",
    "rustls-tls",
], default-features = false }
http = "0.2.9"
structopt = "0.3.26"
base64 = "0.21.4"
htpasswd-verify = "0.3.0"
regex = "1.9.5"

[build-dependencies]
tonic-build = "0.10.1"

[replace]
"h2:0.3.21" = { git = "https://github.com/arthurlm/h2.git", rev = "7820c42ca36699d0004f0f173300244beddd0094" }
